# wifi-lamp

./: .gitignore  README.md  connect.sh  interfaces  rpi_id_rsa  rpi_id_rsa.pub  setup_wifi  setup_wifi.py
RPi Lamp iOS/RPi Lamp iOS/: SceneDelegate.swift
RPi Lamp iOS/RPi Lamp iOS.xcodeproj/: project.pbxproj
dbg_usr_cli/: Cargo.toml
dbg_usr_cli/src/: main.rs
diagrams/: cli_srv_seq.txt  dev_srv_seq.txt  usr_srv_seq.txt
keys/: id_rsa  id_rsa_arni  id_rsa_arni.pub  rpi_id_key.pub
lamp_cli/: Cargo.toml
lamp_cli/src/: client.rs
lamp_dev_cli/: Cargo.toml
lamp_dev_cli/src/: client.rs  main.rs
lamp_ios_lib/: Cargo.toml  build.rs
lamp_ios_lib/src/: lamp_ios_lib.h  lib.rs
lamp_protocol/: Cargo.toml
lamp_protocol/src/: err.rs  lib.rs
lamp_setup/lamp_setup.xcodeproj/: project.pbxproj
lamp_srv/: Cargo.toml
rpi_ble_cli/: Info.plist  banner_view.cpp  banner_view.h  clickable_label.cpp  clickable_label.h  device_finder.cpp  device_finder.h  device_handler.cpp  device_handler.h  device_info_view.cpp  device_info_view.h  device_network_view.cpp  device_network_view.h  device_pair_view.cpp  device_pair_view.h  device_view.cpp  device_view.h  devicefinder.cpp  devicefinder.h  devicehandler.cpp  devicehandler.h  deviceview.cpp  deviceview.h  lamp_cli.pro  line_edit.cpp  line_edit.h  main.cpp  mainwindow.cpp  resources.qrc  spinner.cpp  spinner.h  topbanner.cpp  topbanner.h  utils.cpp  utils.hpp  uuid.hpp
rpi_ble_srv/: .gitignore  connection_handler.cpp  connection_handler.hpp  device_info.cpp  device_info.hpp  main.cpp  qmake_clean  rpi_ble_srv.pro  uuid.hpp
(+32 files in other folders)
