[package]
name = "lamp_ios_lib"
version = "0.1.0"
authors = ["Ian Brault <ian@brault.dev>"]
edition = "2018"
publish = false

[build-dependencies]
cbindgen = "0.16.0"

[dependencies]
lamp_protocol = { path = "../lamp_protocol" }
tungstenite = "0.11"

[lib]
name = "lampios"
crate-type = ["staticlib", "cdylib"]
